force-app/main/default/objects/fboost__B_AsyncJob__c/fboost__B_AsyncJob__c.object-meta.xml
<CustomObject>
    <description>Boost Async Job</description>
    <label>Boost Async Job</label>
    <nameField>
        <displayFormat>Job-{YYYY}-{MM}-{DD}-{0}</displayFormat>
        <label>Job Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Boost Async Jobs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>