force-app/main/default/objects/fboost__B_AsyncJob__c/fields/fboost__Attempt__c.field-meta.xml
<CustomField>
    <fullName>fboost__Attempt__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Number of processing failed attempts</description>
    <externalId>true</externalId>
    <inlineHelpText>Number of processing failed attempts</inlineHelpText>
    <label>Attempt</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>