force-app/main/default/objects/fboost__B_AsyncJob__c/fields/fboost__DelayAsyncThreshold__c.field-meta.xml
<CustomField>
    <fullName>fboost__DelayAsyncThreshold__c</fullName>
    <description>Internal technical field - determines if system will delays Async Job because of platform async limit threshold</description>
    <externalId>true</externalId>
    <inlineHelpText>Internal technical field - determines if system will delays Async Job because of platform async limit threshold</inlineHelpText>
    <label>Delay - Async Threshold</label>
    <length>1</length>
    <type>Text</type>
</CustomField>