force-app/main/default/objects/fboost__B_AsyncJob__c/fields/fboost__Error__c.field-meta.xml
<CustomField>
    <fullName>fboost__Error__c</fullName>
    <description>Stores error message received Async Job processing</description>
    <label>Error</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>