force-app/main/default/objects/fboost__B_AsyncJob__c/fields/fboost__ExecutionStrategy__c.field-meta.xml
<CustomField>
    <fullName>fboost__ExecutionStrategy__c</fullName>
    <description>Determines the process execution strategy, available options : Direct, Future, Batch, Queueable, MultiQueueable</description>
    <externalId>true</externalId>
    <inlineHelpText>Determines the process execution strategy, available options : Direct, Future, Batch, Queueable, MultiQueueable</inlineHelpText>
    <label>Execution Strategy</label>
    <length>32</length>
    <type>Text</type>
</CustomField>