force-app/main/default/objects/fboost__B_AsyncJob__c/fields/fboost__FirstExecutionTime__c.field-meta.xml
<CustomField>
    <fullName>fboost__FirstExecutionTime__c</fullName>
    <description>Determines the time when record was processed first time. Is used to determine unusual processing behaviour.</description>
    <inlineHelpText>Determines the time when record was processed first time. Is used to determine unusual processing behaviour.</inlineHelpText>
    <label>First Execution Time</label>
    <type>DateTime</type>
</CustomField>