force-app/main/default/objects/fboost__B_AsyncJob__c/fields/fboost__JobId__c.field-meta.xml
<CustomField>
    <fullName>fboost__JobId__c</fullName>
    <description>Field determine AsyncApexJob id which is used to process related record</description>
    <externalId>true</externalId>
    <inlineHelpText>Field determine AsyncApexJob id which is used to process related record</inlineHelpText>
    <label>JobId</label>
    <length>18</length>
    <type>Text</type>
</CustomField>