force-app/main/default/objects/fboost__B_AsyncJob__c/fields/fboost__Payload__c.field-meta.xml
<CustomField>
    <fullName>fboost__Payload__c</fullName>
    <description>Field used to store additional data needed to process request (ie JSON data from external system)</description>
    <inlineHelpText>Field used to store additional data needed to process request (ie JSON data from external system)</inlineHelpText>
    <label>Payload</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>