force-app/main/default/objects/fboost__B_AsyncJob__c/fields/fboost__ProcessKey__c.field-meta.xml
<CustomField>
    <fullName>fboost__ProcessKey__c</fullName>
    <description>Internal technical field</description>
    <externalId>true</externalId>
    <inlineHelpText>Internal technical field</inlineHelpText>
    <label>Process Key</label>
    <length>255</length>
    <type>Text</type>
</CustomField>