force-app/main/default/objects/fboost__B_AsyncJob__c/fields/fboost__RecordKey__c.field-meta.xml
<CustomField>
    <fullName>fboost__RecordKey__c</fullName>
    <description>Unique Key or Id of record which needs to be processed</description>
    <externalId>true</externalId>
    <inlineHelpText>Unique Key or Id of record which needs to be processed</inlineHelpText>
    <label>Record Key</label>
    <length>255</length>
    <type>Text</type>
</CustomField>